Gathering my thoughts for next changes

--- a/cubigma/config.json
+++ b/cubigma/config.json
@@ -1,6 +1,7 @@
 {
-  "SYMBOLS_PER_LINE": 7,
-  "LINES_PER_BLOCK": 7,
-  "NUM_BLOCKS": 7,
-  "NUM_OF_ROTORS": 3
+  "LENGTH_OF_CUBE": 7,
+  "NUMBER_OF_ROTORS_TO_GENERATE": 5,
+  "ROTORS_TO_USE": [4, 0, 3],
+  "ENCRYPT_OR_DECRYPT": "ENCRYPT",
+  "ALSO_USE_STEGANOGRAPHY": false
 }
