Implemented plugboard. Working on reflector presently

--- a/cubigma/config.json
+++ b/cubigma/config.json
@@ -3,5 +3,6 @@
   "NUMBER_OF_ROTORS_TO_GENERATE": 5,
   "ROTORS_TO_USE": [4, 0, 3],
   "ENCRYPT_OR_DECRYPT": "DECRYPT",
-  "ALSO_USE_STEGANOGRAPHY": false
+  "ALSO_USE_STEGANOGRAPHY": false,
+  "PLUGBOARD": ["AB", "CD", "EF", "R;", "🤔©"]
 }
