Augment code. Ensure that all tests in _core and _private have the correct mocks

--- a/cubigma/config.json
+++ b/cubigma/config.json
@@ -2,7 +2,7 @@
   "LENGTH_OF_CUBE": 5,
   "NUMBER_OF_ROTORS_TO_GENERATE": 5,
   "ROTORS_TO_USE": [4, 0, 3],
-  "ENCRYPT_OR_DECRYPT": "DECRYPT",
+  "ENCRYPT_OR_DECRYPT": "ENCRYPT",
   "ALSO_USE_STEGANOGRAPHY": false,
   "PLUGBOARD": []
 }
